# flugazz

./: Cargo.toml  c_ffi.hpp
examples/: main.cpp  main.rs
src/: approx.rs  c_ffi.rs  lib.rs  liquid_drop.rs  main-legacy.rs  main.rs  runge_kutta.rs  util.rs
